<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;

class Note extends Model
{
    use HasFactory;

    protected $fillable = ['idUser', 'idScene', 'note'];

    protected function user(): BelongsTo
    {
        return $this->belongsTo(User::class);
    }

    protected function scene(): BelongsTo
    {
        return $this->belongsTo(Scene::class);
    }
}
